	* Changed the 'WHHttpServer::requestReceived(int,WHHttpRequest *)'
	method to 'WHHttpServer::requestReceived(WHHttpConnection *)' in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpUser' class in 'src/wh/whhttpuser.cpp' and
	'src/wh/whhttpuser.h'.
	* Added 'WHHttpServer::userRealms()', 'WHHttpServer::userNames()',
	'WHHttpServer::addUser()' and 'WHHttpServer::removeUser()' methods
	in 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added support for HTTP Basic authentication.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'maxsize' parameter from the constructor of the
	'WHCgiPost' class in 'src/wh/whcgipost.cpp' and
	'src/wh/whcgipost.h'.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHHttpServer::loadUsers()' and 'WHHttpServer::saveUsers()'
	methods in 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Fixed multiple races in WHHttpServer.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Added 'ADDUSER2' and 'DELETEUSER2' commands in
	'src/webhostd/webhostd.cpp', 'src/webhostd/webhostd.h' and
	'src/webhostd/users.cpp'.
	* Added 'WHCgiPost::sendAddUser2Command()' and
	'WHCgiPost::sendDeleteUser2Command()' methods in 'src/wh/whcgipost.cpp'
	and 'src/wh/whcgipost.h'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 2:0:2.
	* Incremented the package version to 0.8.9.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Reenabled temp file cleanup code in 'src/webhostd/upgrade.cpp'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Merged the 'WHHttpRequest' class into 'WHHttpConnection'.
2016-02-25 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'WHHttpServer::sendResponse()',
	'WHHttpServer::sendHeader()' and 'WHHttpServer::sendError()' methods
	from 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.