@@ -31,8 +31,12 @@ class MainObject : public QObject
  public:
   MainObject(QObject *parent=0);
 
+ private slots:
+  void socketMessageReceivedData(int id,WHSocketMessage *msg);
+
  private:
   WHHttpServer *test_server;
+  WHHttpConnection *test_connection;
 };
 
 
