@@ -1,0 +1,62 @@
+// whsocketmessage.cpp
+//
+// Abstract a WebSockets message
+//
+// (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#include "whsocketmessage.h"
+
+WHSocketMessage::WHSocketMessage()
+{
+  sock_op_code=WHSocketMessage::Close;
+}
+
+
+WHSocketMessage::OpCode WHSocketMessage::opCode() const
+{
+  return sock_op_code;
+}
+
+
+void WHSocketMessage::setOpCode(OpCode opcode)
+{
+  sock_op_code=opcode;
+}
+
+
+QByteArray WHSocketMessage::payload() const
+{
+  return sock_payload;
+}
+
+
+void WHSocketMessage::appendPayload(const char c)
+{
+  sock_payload+=c;
+}
+
+
+void WHSocketMessage::clearPayload()
+{
+  sock_payload.clear();
+}
+
+
+bool WHSocketMessage::isControlMessage(OpCode opcode)
+{
+  return opcode>=WHSocketMessage::Close;
+}
